//! ABCI++ Server Implementation for CometBFT Integration
//!
//! This module implements the ABCI++ protocol server that allows CometBFT
//! to communicate with the Helium blockchain application. It provides all
//! the necessary ABCI++ methods including the new PrepareProposal and
//! ProcessProposal for block proposal handling.

use std::sync::Arc;
use tokio::net::TcpListener;
use tokio::sync::RwLock;
use tonic::{transport::Server, Request, Response, Status};
// use tokio::io::{AsyncReadExt, AsyncWriteExt};
// use prost_types::Any;

use helium_baseapp::{BaseApp, Event};

use crate::config::AbciConfig;
use thiserror::Error;
use tracing::{debug, error, info};

/// ABCI++ server errors
#[derive(Error, Debug)]
pub enum AbciError {
    /// BaseApp error
    #[error("BaseApp error: {0}")]
    BaseApp(#[from] helium_baseapp::BaseAppError),

    /// Invalid request
    #[error("Invalid request: {0}")]
    InvalidRequest(String),

    /// Server error
    #[error("Server error: {0}")]
    ServerError(String),

    /// Codec error
    #[error("Codec error: {0}")]
    CodecError(String),

    /// Invalid transaction
    #[error("Invalid transaction: {0}")]
    InvalidTransaction(String),

    /// Insufficient fees
    #[error("Insufficient fees: {0}")]
    InsufficientFees(String),

    /// Invalid sequence
    #[error("Invalid sequence: {0}")]
    InvalidSequence(String),

    /// Unknown request
    #[error("Unknown request: {0}")]
    UnknownRequest(String),

    /// Internal error
    #[error("Internal error: {0}")]
    InternalError(String),
}

impl AbciError {
    /// Get the error code for ABCI responses
    pub fn code(&self) -> u32 {
        match self {
            AbciError::InvalidTransaction(_) => 1,
            AbciError::InsufficientFees(_) => 2,
            AbciError::InvalidSequence(_) => 3,
            AbciError::UnknownRequest(_) => 4,
            AbciError::InternalError(_) => 99,
            _ => 100,
        }
    }
}

pub type Result<T> = std::result::Result<T, AbciError>;

/// ABCI++ Protocol Definitions
pub mod abci {
    tonic::include_proto!("cometbft.abci.v1");
}

use abci::{
    abci_service_server::{AbciService, AbciServiceServer},
    *,
};

/// ABCI++ Server implementation
#[derive(Clone)]
pub struct AbciServer {
    /// The base application
    app: Arc<RwLock<BaseApp>>,
    /// Chain ID
    chain_id: String,
    /// Initial height
    #[allow(dead_code)]
    initial_height: i64,
    /// Server configuration
    config: AbciConfig,
}

impl AbciServer {
    /// Create a new ABCI++ server
    pub fn new(app: BaseApp, chain_id: String) -> Self {
        Self::with_config(app, chain_id, AbciConfig::default())
    }

    /// Create a new ABCI++ server with configuration
    pub fn with_config(app: BaseApp, chain_id: String, config: AbciConfig) -> Self {
        Self {
            app: Arc::new(RwLock::new(app)),
            chain_id,
            initial_height: 1,
            config,
        }
    }

    /// Start the ABCI++ server
    pub async fn start(self, addr: &str) -> Result<()> {
        let addr = addr
            .parse()
            .map_err(|e| AbciError::ServerError(format!("Invalid address: {e}")))?;

        info!("Starting ABCI++ server on {}", addr);

        Server::builder()
            .add_service(AbciServiceServer::new(self))
            .serve(addr)
            .await
            .map_err(|e| AbciError::ServerError(e.to_string()))?;

        Ok(())
    }

    /// Start the ABCI server with TCP connection handling
    pub async fn start_abci_server(
        app: Arc<RwLock<BaseApp>>,
        config: &AbciConfig,
        mut shutdown_rx: tokio::sync::oneshot::Receiver<()>,
    ) -> Result<()> {
        let server = AbciServer {
            app,
            chain_id: config.chain_id.clone(),
            initial_height: 1,
            config: config.clone(),
        };

        // Parse listen address
        let addr: std::net::SocketAddr = config
            .listen_address
            .strip_prefix("tcp://")
            .unwrap_or(&config.listen_address)
            .parse()
            .map_err(|e| AbciError::ServerError(format!("Invalid address: {e}")))?;

        let listener = TcpListener::bind(addr)
            .await
            .map_err(|e| AbciError::ServerError(format!("Failed to bind: {e}")))?;

        info!("ABCI server listening on {}", addr);

        // Accept connections with graceful shutdown
        loop {
            tokio::select! {
                // Handle incoming connections
                accept_result = listener.accept() => {
                    match accept_result {
                        Ok((stream, peer_addr)) => {
                            let server_clone = server.clone();

                            tokio::spawn(async move {
                                if let Err(e) = handle_abci_connection(server_clone, stream, peer_addr).await {
                                    error!("ABCI connection error from {}: {}", peer_addr, e);
                                }
                            });
                        }
                        Err(e) => {
                            error!("Failed to accept connection: {}", e);
                            continue;
                        }
                    }
                }
                // Handle shutdown signal
                _ = &mut shutdown_rx => {
                    info!("Received shutdown signal, stopping ABCI server");
                    break;
                }
            }
        }

        info!("ABCI server shutdown complete");
        Ok(())
    }
}

#[tonic::async_trait]
impl AbciService for AbciServer {
    /// Echo returns the same message as provided
    async fn echo(
        &self,
        request: Request<EchoRequest>,
    ) -> std::result::Result<Response<EchoResponse>, Status> {
        let req = request.into_inner();
        debug!("ABCI Echo: {}", req.message);

        Ok(Response::new(EchoResponse {
            message: req.message,
        }))
    }

    /// Flush is a no-op
    async fn flush(
        &self,
        _request: Request<FlushRequest>,
    ) -> std::result::Result<Response<FlushResponse>, Status> {
        debug!("ABCI Flush");
        Ok(Response::new(FlushResponse {}))
    }

    /// Info returns information about the application state
    async fn info(
        &self,
        _request: Request<InfoRequest>,
    ) -> std::result::Result<Response<InfoResponse>, Status> {
        debug!("ABCI Info");

        let app = self.app.read().await;
        let height = app.get_height();
        let app_hash = app.get_last_app_hash().to_vec();

        Ok(Response::new(InfoResponse {
            data: "helium".to_string(),
            version: env!("CARGO_PKG_VERSION").to_string(),
            app_version: 1,
            last_block_height: height as i64,
            last_block_app_hash: app_hash,
        }))
    }

    /// InitChain is called once upon genesis
    async fn init_chain(
        &self,
        request: Request<InitChainRequest>,
    ) -> std::result::Result<Response<InitChainResponse>, Status> {
        let req = request.into_inner();
        info!(
            "ABCI InitChain: chain_id={}, height={}",
            req.chain_id, req.initial_height
        );

        // Validate chain ID
        if req.chain_id != self.chain_id {
            return Err(Status::invalid_argument(format!(
                "Invalid chain ID: expected {}, got {}",
                self.chain_id, req.chain_id
            )));
        }

        let mut app = self.app.write().await;

        // Initialize the chain with genesis data
        app.init_chain(req.chain_id.clone(), &req.app_state_bytes)
            .map_err(|e| Status::internal(format!("Failed to initialize chain: {e}")))?;

        // Store initial height
        let _initial_height = if req.initial_height > 0 {
            req.initial_height
        } else {
            1
        };

        // TODO: Store consensus params when implemented

        Ok(Response::new(InitChainResponse {
            consensus_params: req.consensus_params,
            validators: vec![],
            app_hash: vec![],
        }))
    }

    /// Query allows the application to expose information
    async fn query(
        &self,
        request: Request<QueryRequest>,
    ) -> std::result::Result<Response<abci::QueryResponse>, Status> {
        let req = request.into_inner();
        debug!("ABCI Query: path={}, height={}", req.path, req.height);

        let app = self.app.read().await;

        // Parse query path (e.g., /cosmos.bank.v1beta1.Query/Balance)
        let parts: Vec<&str> = req.path.split('/').filter(|s| !s.is_empty()).collect();
        if parts.is_empty() {
            return Err(Status::invalid_argument("Empty query path"));
        }

        // Route query based on path structure
        let response = if req.path.starts_with("/cosmos.") || req.path.starts_with("/helium.") {
            // gRPC-style query paths for modules
            match app.query(req.path.clone(), &req.data, req.height as u64, req.prove) {
                Ok(result) => result,
                Err(e) => {
                    return Ok(Response::new(abci::QueryResponse {
                        code: 1,
                        log: e.to_string(),
                        info: String::new(),
                        index: 0,
                        key: req.data,
                        value: vec![],
                        proof_ops: None,
                        height: req.height,
                        codespace: String::new(),
                    }));
                }
            }
        } else {
            // Legacy query paths
            match parts[0] {
                "app" => {
                    // Application-specific queries
                    app.query(req.path, &req.data, req.height as u64, req.prove)
                        .map_err(|e| Status::internal(format!("Query failed: {e}")))?
                }
                "store" => {
                    // Direct store queries
                    // TODO: Implement store queries via WASI modules
                    helium_baseapp::QueryResponse {
                        code: 0,
                        log: "Store queries not yet implemented".to_string(),
                        value: vec![],
                        height: req.height as u64,
                        proof: None,
                    }
                }
                "custom" => {
                    // Custom application queries
                    app.query(req.path, &req.data, req.height as u64, req.prove)
                        .map_err(|e| Status::internal(format!("Query failed: {e}")))?
                }
                _ => {
                    return Err(Status::unimplemented(format!(
                        "Unknown query path: {}",
                        req.path
                    )));
                }
            }
        };

        Ok(Response::new(abci::QueryResponse {
            code: response.code,
            log: response.log,
            info: String::new(),
            index: 0,
            key: req.data,
            value: response.value,
            proof_ops: response.proof.map(|_p| {
                // TODO: Convert proof to ProofOps when merkle proofs are implemented
                abci::ProofOps { ops: vec![] }
            }),
            height: response.height as i64,
            codespace: String::new(),
        }))
    }

    /// CheckTx validates a transaction for the mempool
    async fn check_tx(
        &self,
        request: Request<CheckTxRequest>,
    ) -> std::result::Result<Response<CheckTxResponse>, Status> {
        let req = request.into_inner();
        debug!("ABCI CheckTx: {} bytes, type={}", req.tx.len(), req.r#type);

        let app = self.app.read().await;
        let result = app
            .check_tx(&req.tx)
            .map_err(|e| Status::internal(format!("CheckTx failed: {e}")))?;

        Ok(Response::new(CheckTxResponse {
            code: result.code,
            data: vec![],
            log: result.log,
            info: String::new(),
            gas_wanted: result.gas_wanted as i64,
            gas_used: result.gas_used as i64,
            events: convert_events(result.events),
            codespace: String::new(),
        }))
    }

    /// Commit persists the application state
    async fn commit(
        &self,
        _request: Request<CommitRequest>,
    ) -> std::result::Result<Response<CommitResponse>, Status> {
        debug!("ABCI Commit");

        let mut app = self.app.write().await;
        let _app_hash = app
            .commit()
            .map_err(|e| Status::internal(format!("Commit failed: {e}")))?;

        let height = app.get_height();

        // Optionally persist to disk based on configuration
        if self.config.persist_interval > 0 && height.is_multiple_of(self.config.persist_interval) {
            // TODO: Implement snapshot persistence
            info!("Persisting snapshot at height {}", height);
        }

        // Calculate retain height based on configuration
        let retain_height = if self.config.retain_blocks > 0 {
            height.saturating_sub(self.config.retain_blocks) as i64
        } else {
            0 // Retain all blocks
        };

        Ok(Response::new(CommitResponse { retain_height }))
    }

    /// ListSnapshots returns available snapshots
    async fn list_snapshots(
        &self,
        _request: Request<ListSnapshotsRequest>,
    ) -> std::result::Result<Response<ListSnapshotsResponse>, Status> {
        debug!("ABCI ListSnapshots");

        // TODO: Implement snapshot support
        Ok(Response::new(ListSnapshotsResponse { snapshots: vec![] }))
    }

    /// OfferSnapshot is called when a snapshot is available from peers
    async fn offer_snapshot(
        &self,
        request: Request<OfferSnapshotRequest>,
    ) -> std::result::Result<Response<OfferSnapshotResponse>, Status> {
        let req = request.into_inner();
        debug!(
            "ABCI OfferSnapshot: height={}",
            req.snapshot.as_ref().map(|s| s.height).unwrap_or(0)
        );

        // TODO: Implement snapshot support
        Ok(Response::new(OfferSnapshotResponse {
            result: OfferSnapshotResult::Reject.into(),
        }))
    }

    /// LoadSnapshotChunk loads a chunk of a snapshot
    async fn load_snapshot_chunk(
        &self,
        request: Request<LoadSnapshotChunkRequest>,
    ) -> std::result::Result<Response<LoadSnapshotChunkResponse>, Status> {
        let req = request.into_inner();
        debug!(
            "ABCI LoadSnapshotChunk: height={}, format={}, chunk={}",
            req.height, req.format, req.chunk
        );

        // TODO: Implement snapshot support
        Ok(Response::new(LoadSnapshotChunkResponse { chunk: vec![] }))
    }

    /// ApplySnapshotChunk applies a chunk of a snapshot
    async fn apply_snapshot_chunk(
        &self,
        request: Request<ApplySnapshotChunkRequest>,
    ) -> std::result::Result<Response<ApplySnapshotChunkResponse>, Status> {
        let req = request.into_inner();
        debug!("ABCI ApplySnapshotChunk: {} bytes", req.chunk.len());

        // TODO: Implement snapshot support
        Ok(Response::new(ApplySnapshotChunkResponse {
            result: ApplySnapshotChunkResult::AbortResult.into(),
            refetch_chunks: vec![],
            reject_senders: vec![],
        }))
    }

    /// PrepareProposal allows the application to modify transactions before proposing a block
    async fn prepare_proposal(
        &self,
        request: Request<PrepareProposalRequest>,
    ) -> std::result::Result<Response<PrepareProposalResponse>, Status> {
        let req = request.into_inner();
        info!(
            "ABCI PrepareProposal: height={}, {} txs, max_bytes={}",
            req.height,
            req.txs.len(),
            req.max_tx_bytes
        );

        // For now, just return the same transactions
        // TODO: Implement transaction reordering, filtering, and addition
        let txs = req.txs;

        Ok(Response::new(PrepareProposalResponse { txs }))
    }

    /// ProcessProposal allows the application to validate a proposed block
    async fn process_proposal(
        &self,
        request: Request<ProcessProposalRequest>,
    ) -> std::result::Result<Response<ProcessProposalResponse>, Status> {
        let req = request.into_inner();
        info!(
            "ABCI ProcessProposal: height={}, {} txs, proposer={}",
            req.height,
            req.txs.len(),
            hex::encode(&req.proposer_address)
        );

        // Basic validation
        // TODO: Implement full proposal validation via WASI modules
        let _app = self.app.write().await;

        // For now, accept all valid proposals
        let status = ProcessProposalStatus::AcceptProposal;

        Ok(Response::new(ProcessProposalResponse {
            status: status.into(),
        }))
    }

    /// ExtendVote allows applications to include additional data in precommit votes
    async fn extend_vote(
        &self,
        request: Request<ExtendVoteRequest>,
    ) -> std::result::Result<Response<ExtendVoteResponse>, Status> {
        let req = request.into_inner();
        debug!("ABCI ExtendVote: height={}", req.height);

        // TODO: Implement vote extensions when needed
        Ok(Response::new(ExtendVoteResponse {
            vote_extension: vec![],
        }))
    }

    /// VerifyVoteExtension verifies application-specific vote extension data
    async fn verify_vote_extension(
        &self,
        request: Request<VerifyVoteExtensionRequest>,
    ) -> std::result::Result<Response<VerifyVoteExtensionResponse>, Status> {
        let req = request.into_inner();
        debug!(
            "ABCI VerifyVoteExtension: height={}, validator={}",
            req.height,
            hex::encode(&req.validator_address)
        );

        // TODO: Implement vote extension verification when needed
        Ok(Response::new(VerifyVoteExtensionResponse {
            status: VerifyVoteExtensionStatus::AcceptVote.into(),
        }))
    }

    /// FinalizeBlock delivers a decided block to the application
    async fn finalize_block(
        &self,
        request: Request<FinalizeBlockRequest>,
    ) -> std::result::Result<Response<FinalizeBlockResponse>, Status> {
        let req = request.into_inner();
        info!(
            "ABCI FinalizeBlock: height={}, {} txs, time={}",
            req.height,
            req.txs.len(),
            req.time.as_ref().map(|t| t.seconds).unwrap_or(0)
        );

        let mut app = self.app.write().await;

        // Convert timestamp
        let block_time = req.time.as_ref().map(|t| t.seconds as u64).unwrap_or(0);

        // Process the block
        let tx_results = app
            .finalize_block(req.height as u64, block_time, req.txs)
            .map_err(|e| Status::internal(format!("FinalizeBlock failed: {e}")))?;

        // Convert transaction results
        let tx_results = tx_results
            .into_iter()
            .map(|result| ExecTxResult {
                code: result.code,
                data: vec![],
                log: result.log,
                info: String::new(),
                gas_wanted: result.gas_wanted as i64,
                gas_used: result.gas_used as i64,
                events: convert_events(result.events),
                codespace: String::new(),
            })
            .collect();

        // TODO: Handle validator updates and consensus param updates

        Ok(Response::new(FinalizeBlockResponse {
            events: vec![],
            tx_results,
            validator_updates: vec![],
            consensus_param_updates: None,
            app_hash: app.get_last_app_hash().to_vec(),
        }))
    }
}

/// Convert internal events to ABCI events
fn convert_events(events: Vec<Event>) -> Vec<abci::Event> {
    events
        .into_iter()
        .map(|event| {
            abci::Event {
                r#type: event.event_type,
                attributes: event
                    .attributes
                    .into_iter()
                    .map(|attr| {
                        abci::EventAttribute {
                            key: attr.key,
                            value: attr.value,
                            index: true, // Index all attributes for now
                        }
                    })
                    .collect(),
            }
        })
        .collect()
}

/// ABCI++ Server Builder
pub struct AbciServerBuilder {
    app: Option<BaseApp>,
    chain_id: Option<String>,
    address: String,
}

impl AbciServerBuilder {
    /// Create a new ABCI server builder
    pub fn new() -> Self {
        Self {
            app: None,
            chain_id: None,
            address: "127.0.0.1:26658".to_string(), // Default ABCI port
        }
    }

    /// Set the base application
    pub fn with_app(mut self, app: BaseApp) -> Self {
        self.app = Some(app);
        self
    }

    /// Set the chain ID
    pub fn with_chain_id(mut self, chain_id: String) -> Self {
        self.chain_id = Some(chain_id);
        self
    }

    /// Set the server address
    pub fn with_address(mut self, address: String) -> Self {
        self.address = address;
        self
    }

    /// Build and start the server
    pub async fn build_and_start(self) -> Result<()> {
        let app = self
            .app
            .ok_or_else(|| AbciError::InvalidRequest("BaseApp not provided".to_string()))?;
        let chain_id = self
            .chain_id
            .ok_or_else(|| AbciError::InvalidRequest("Chain ID not provided".to_string()))?;

        let server = AbciServer::new(app, chain_id);
        server.start(&self.address).await
    }
}

impl Default for AbciServerBuilder {
    fn default() -> Self {
        Self::new()
    }
}

#[cfg(test)]
mod tests {
    use super::*;
    use crate::config::AbciConfig;

    #[tokio::test]
    async fn test_abci_server_creation() {
        let app = BaseApp::new("test-app".to_string()).expect("Failed to create BaseApp");
        let server = AbciServer::new(app, "test-chain".to_string());
        assert_eq!(server.chain_id, "test-chain");
        assert_eq!(server.initial_height, 1);
    }

    #[tokio::test]
    async fn test_abci_server_with_config() {
        let app = BaseApp::new("test-app".to_string()).expect("Failed to create BaseApp");
        let config = AbciConfig {
            listen_address: "tcp://127.0.0.1:26658".to_string(),
            grpc_address: Some("127.0.0.1:9090".to_string()),
            max_connections: 5,
            flush_interval: 50,
            persist_interval: 10,
            retain_blocks: 100,
            chain_id: "test-chain".to_string(),
        };
        let server = AbciServer::with_config(app, "test-chain".to_string(), config.clone());
        assert_eq!(server.chain_id, "test-chain");
        assert_eq!(server.config.retain_blocks, 100);
    }

    #[tokio::test]
    async fn test_echo() {
        let app = BaseApp::new("test-app".to_string()).expect("Failed to create BaseApp");
        let server = AbciServer::new(app, "test-chain".to_string());

        let request = Request::new(EchoRequest {
            message: "hello".to_string(),
        });

        let response = server.echo(request).await.unwrap();
        assert_eq!(response.into_inner().message, "hello");
    }

    #[tokio::test]
    async fn test_info() {
        let app = BaseApp::new("test-app".to_string()).expect("Failed to create BaseApp");
        let server = AbciServer::new(app, "test-chain".to_string());

        let request = Request::new(InfoRequest {});
        let response = server.info(request).await.unwrap();
        let info = response.into_inner();

        assert_eq!(info.data, "helium");
        assert_eq!(info.app_version, 1);
        assert_eq!(info.last_block_height, 0);
    }

    #[tokio::test]
    async fn test_init_chain() {
        let app = BaseApp::new("test-app".to_string()).expect("Failed to create BaseApp");
        let server = AbciServer::new(app, "test-chain".to_string());

        let request = Request::new(InitChainRequest {
            time: None,
            chain_id: "test-chain".to_string(),
            consensus_params: None,
            validators: vec![],
            app_state_bytes: vec![],
            initial_height: 1,
        });

        let response = server.init_chain(request).await.unwrap();
        let result = response.into_inner();
        assert!(result.validators.is_empty());
    }

    #[tokio::test]
    async fn test_init_chain_wrong_chain_id() {
        let app = BaseApp::new("test-app".to_string()).expect("Failed to create BaseApp");
        let server = AbciServer::new(app, "test-chain".to_string());

        let request = Request::new(InitChainRequest {
            time: None,
            chain_id: "wrong-chain".to_string(),
            consensus_params: None,
            validators: vec![],
            app_state_bytes: vec![],
            initial_height: 1,
        });

        let response = server.init_chain(request).await;
        assert!(response.is_err());
    }

    #[tokio::test]
    async fn test_check_tx() {
        let app = BaseApp::new("test-app".to_string()).expect("Failed to create BaseApp");
        let server = AbciServer::new(app, "test-chain".to_string());

        let request = Request::new(CheckTxRequest {
            tx: vec![1, 2, 3, 4],
            r#type: 0,
        });

        let response = server.check_tx(request).await.unwrap();
        let result = response.into_inner();
        // Without a valid tx_decoder module, invalid transactions will fail
        // The test transaction [1, 2, 3, 4] is not a valid encoded transaction
        assert_eq!(result.code, 1);
        assert!(
            result.log.contains("no messages")
                || result.log.contains("decode failed")
                || result.log.contains("ante handler")
        );
    }

    #[tokio::test]
    async fn test_query() {
        let app = BaseApp::new("test-app".to_string()).expect("Failed to create BaseApp");
        let server = AbciServer::new(app, "test-chain".to_string());

        let request = Request::new(QueryRequest {
            data: vec![],
            path: "/app/version".to_string(),
            height: 0,
            prove: false,
        });

        let response = server.query(request).await.unwrap();
        let result = response.into_inner();
        assert_eq!(result.code, 0);
    }

    #[tokio::test]
    async fn test_query_invalid_path() {
        let app = BaseApp::new("test-app".to_string()).expect("Failed to create BaseApp");
        let server = AbciServer::new(app, "test-chain".to_string());

        let request = Request::new(QueryRequest {
            data: vec![],
            path: "".to_string(),
            height: 0,
            prove: false,
        });

        let response = server.query(request).await;
        assert!(response.is_err());
    }

    #[tokio::test]
    async fn test_error_codes() {
        assert_eq!(AbciError::InvalidTransaction("test".to_string()).code(), 1);
        assert_eq!(AbciError::InsufficientFees("test".to_string()).code(), 2);
        assert_eq!(AbciError::InvalidSequence("test".to_string()).code(), 3);
        assert_eq!(AbciError::UnknownRequest("test".to_string()).code(), 4);
        assert_eq!(AbciError::InternalError("test".to_string()).code(), 99);
        assert_eq!(
            AbciError::BaseApp(helium_baseapp::BaseAppError::InvalidTx("test".to_string())).code(),
            100
        );
    }
}

/// Handle ABCI connection - placeholder for TCP connection handling
async fn handle_abci_connection(
    _server: AbciServer,
    _stream: tokio::net::TcpStream,
    peer_addr: std::net::SocketAddr,
) -> Result<()> {
    info!("New ABCI connection from {}", peer_addr);

    // TODO: Implement actual ABCI wire protocol handling
    // This would involve:
    // 1. Reading length-prefixed messages
    // 2. Decoding ABCI requests
    // 3. Routing to appropriate methods
    // 4. Encoding and sending responses

    // For now, we're using gRPC via tonic, so this is a placeholder

    Ok(())
}
